# poker_game

./: .gitignore  .gitmodules  ARCHITECTURE.md  BACKEND_COMMON_PATH_SCOPE.md  BACKLOG_SHOWDOWN_POLISH.md  CAPTURE_CDP_PLAN.md  CAPTURE_MATRIX.md  CHECKPOINT_EXECUTION_PLAN.md  CLAUDE.md  DECODER_VALIDATION_PLAN.md  DERIVED_STACK_SPEC_TEMPLATE.md  END_TO_END_BROWSER_TEST_PLAN.md  ENGINE_PHASE1_PLAN.md  ENGINE_PHASE2_PLAN.md  ENGINE_PHASE3_PLAN.md  ENGINE_PHASE4_PLAN.md  ENGINE_PHASE5_PLAN.md  ENGINE_PHASE6_PLAN.md  ENGINE_PHASE8_PLAN.md  HANDOFF.md  IDENTITY_STUDY_PLAN.md  IMPLEMENTATION_BOOTSTRAP_PLAN.md  LIVE_TABLE_REDUCER_SPEC.md  MANUAL_DEMO_RUNBOOK.md  MANUAL_RECOVERY_DEMO_CHECKLIST.md  NEXT_SESSION.md  NORMALIZED_EVENT_EMITTER_NOTES.md  NORMALIZED_HAND_EVENT_SCHEMA.md  NOTES_TEMPLATE.md  OPERATOR_TRUST_CHECKPOINT.md  PARITY_STATUS.md  PERSISTENCE_AND_RECOVERY_SCOPE.md  PHASE6_IMPLEMENTATION_NOTES.md  PHASE7_IMPLEMENTATION_NOTES.md  PHASE7_PLAN.md  PHASE8_CLOSURE.md  PHASE8_SLICE5_NOTES.md  PLAY_LOOP_HARDENING_SCOPE.md  POST_DEMO_DECISION_FRAME.md  PROTOCOL_BASELINE_FREEZE_PLAN.md  (+18 more)
betfair/: .env.example  .gitignore  README.md  client.py  data_collector.py  model.py  value_finder.py
client/: bot.html  bot.js  canvas-renderer.js  coinpoker-replica.html  index.html  (+8 more)
rust/crates/advisor-cli/: Cargo.toml
rust/crates/advisor-cli/src/: main.rs
rust/crates/runtime-advisor/: Cargo.toml
rust/crates/runtime-advisor/src/: action.rs  artifact_key.rs  classify.rs  emergency.rs  emergency_range_prior.rs  legalizer.rs  lib.rs  mode.rs  recommend.rs  strategy.rs  trust.rs
(+905 files in other folders)
