[package]
name    = "advisor-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "advisor-cli"
path = "src/main.rs"

[dependencies]
runtime-advisor = { path = "../runtime-advisor" }
engine-core     = { path = "../engine-core" }
artifact-store  = { path = "../artifact-store" }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
serde_yaml      = "0.9"
log             = "0.4"
env_logger      = "0.11"
