[package]
name    = "runtime-advisor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde          = { version = "1", features = ["derive"] }
serde_yaml     = "0.9"
thiserror      = "2"
log            = "0.4"
artifact-store = { path = "../artifact-store" }
engine-core    = { path = "../engine-core" }

[dev-dependencies]
env_logger  = "0.11"
tempfile    = "3"
serde_json  = "1"
